[package]
name = "sphinx-lang"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "An intepreter for a dynamic language inspired by Lua and Python, implemented in Rust"
readme = "README.md"
repository = "https://github.com/mwerezak/sphinx-lang"
categories = ["compilers", "development-tools", "parser-implementations"]

[lib]
crate-type = ["lib"]

[[bin]]
name = "sphinx"

[[bin]]
name = "sph-dasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/maniefrust.html

[dependencies]
clap = "3.1.6"
lazy_static = "1.4"
string-interner = "0.14"
# rustc-hash = "1.1.0"
# gc = { path = "../rust-gc/gc" }
# gc_derive = { path = "../rust-gc/gc_derive" }
ahash = "0.7.6"
log = { version = "0.4.0", features = ["release_max_level_off"] }
env_logger = "0.8.4"