[package]
name = "sphinx-lang"
version = "0.7.1"
edition = "2021"
license = "MIT"
description = "An intepreter for a dynamic language implemented in Rust"
readme = "README.md"
repository = "https://github.com/mwerezak/sphinx-lang"
categories = ["compilers", "development-tools", "parser-implementations"]

[lib]
name = "sphinx"
crate-type = ["lib"]

[[bin]]
name = "sphinx"

[[bin]]
name = "sphinx-dasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/maniefrust.html

[dependencies]
ahash = "0.7.6"
string-interner = "0.14"
once_cell = "1.10.0"
static_assertions = "1.1.0"
log = { version = "0.4.0", features = ["release_max_level_off"] }
env_logger = "0.8.4"
clap = "3.1.6"

[dev-dependencies]
test-log = "0.2.10"